# front

./: .gitignore  Dockerfile  Makefile  README.md  __main__.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/assets/styles/: styles.css
app/web/: __init__.py  application.py
settings/: __init__.py
settings/_service/: _base.py
